# c2hlsc-agent

./: .gitignore  README.md  linux_vitis_commands.txt  pyproject.toml  requirements.txt  vitis_hls_bin_path.example.txt
.github/workflows/: ci.yml
c2hlsc_agent/: __init__.py  agent_loop.py  analyze.py  cli.py  config.py  convert.py  diagnostics.py  equivalence.py  hls_project.py  hls_runner.py  hlsc_generator.py  hlsc_repair_agent.py  leveri_testgen.py  llm.py  report.py  testgen.py
configs/: hls_nl_cosim_smoke.json  hls_nl_full_cosim.json  simple_calculator_vitis_cosim_bundle.json
data/hls_nl/: README.md
docs/: functional_equivalent_rtl_agent.md
envs/: environment-linux.yml
examples/bit_ops/: input.c  (+1 more)
hls_nl_full_cosim_passes/: README.md
scripts/: collect_debug_bundle.py  cosim_repair_loop.py  export_cosim_successes.py  generate_hls_nl_llm.py  generate_hls_nl_testbenches.py  repair_hls_nl_dataset.py  retarget_hls_prompts_to_vitis.py  run_hls_nl_cosim_smoke.sh  run_hls_nl_vitis_batch.py  run_hls_nl_vitis_triage.sh  run_remote_vitis.sh  run_vitis_bundle.py  run_vitis_linux.sh  run_vitis_with_bin.py  setup_linux_conda.sh
templates/: Makefile.j2  hls_top.cpp.j2  hls_top.hpp.j2  run_hls.tcl.j2  testbench.cpp.j2
tests/: test_agent_loop.py  test_analyze.py  test_cli_repair_loop.py  test_convert.py  test_equivalence.py  test_export_cosim_successes.py  test_hls_nl_testbench_generation.py  test_hls_nl_vitis_batch.py  test_hlsc_generator.py  test_hlsc_repair_agent.py  test_leveri_testgen.py  test_llm_agents.py  test_repair_hls_nl_dataset.py  test_review_fixes.py
(+4 files in other folders)
